fix: reduced social icons spacing

--- a/app/scss/patterns/_nav-secondary.scss
+++ b/app/scss/patterns/_nav-secondary.scss
@@ -35,6 +35,10 @@
 
     .icon {
       margin-right: 2px;
+
+      @media ($medium-up) {
+        margin-right: $sp-base;
+      }
     }
   }
 }
